
	* lib/python.cygclass: Provide default HOMEPAGE and SRC_URI at cheeseshop.
	(python_optimize) Inform of action instead of showing output.

	* data/mirrors (mirror_mplayer): Added.

	* lib/cvs.cygclass:
	* lib/git.cygclass:
	* lib/svn.cygclass: Redefine, not append, SRC_URI.
	(svn_fetch): Ignore .cvsignore files found in cvs2svn repos.

	* bin/cygport.in: Index mutable, public, and private symbols in 
	each section. Added double-underscore prefix to some private functions.

	* bin/cygport.in:
	* lib/cvs.cygclass:
	* lib/git.cygclass:
	* lib/svn.cygclass:
	Reworked src_fetch and RCS_fetch to allow RCS and FTP/HTTP in SRC_URI.
	Renamed former to __src_fetch as private API.

	* CYGWIN-PATCHES/README:
	* lib/Makefile.am:
	* lib/zope.cygclass: New cygclass for Zope modular libraries.

	* lib/java.cygclass (dojar): Renamed command.
	(dojava): Alias to dojar.
	(dojavadoc, java_wrapper): New install helpers.

	* lib/mono.cygclass (dogac): New helper command for gacutil installation.

	* bin/cygport.in (cyginstall): Redefine exec_prefix for USE_DESTDIR=0.
	(pkg_diff): Exclude .stackdump files by default.

	* bin/prep_scrollkeeper_omf.sh: Improve postinstall and add preremove.

	* CYGWIN-PATCHES/README:
	* configure.ac:
	Post-release version bump.

*** 0.3.0 ***

	* bin/cygport.in (fetch): Remove tarball placeholder if download fails.

	* test/Makefile.am (clean-local):
	Remove bootstrap workdir, in case make check was interrupted.

	* bin/cygport.in (keepdir): New function to keep empty directories.
	(__prep_empty_dirs, src_postinst): Remove empty directories under $D.

	* CYGWIN-PATCHES/README:
	* lib/Makefile.am
	* lib/berkdb.cygclass:
	New cygclass for building the Berkeley DB versions 3.x and 4.x.

	* CYGWIN-PATCHES/README:
	* lib/Makefile.am
	* lib/java.cygclass:
	New cygclass for GNU Classpath based Java packages.

	* bin/dosym: Properly handle multiple targets and relative targets.

	* lib/python.cygclass (dopython): Install DLLs executable.
