@@ -6,7 +6,7 @@
 # Provided by the Cygwin Ports project <http://cygwinports.dotsrc.org/>
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: cygport.in,v 1.68 2007-03-27 21:25:31 yselkowitz Exp $
+# $Id: cygport.in,v 1.69 2007-04-25 03:23:43 yselkowitz Exp $
 #
 ################################################################################
 
@@ -617,16 +617,24 @@ cygpatch() {
 			continue;
 		fi
 
+		patchlevel=0;
+
 		case ${patchfile_name} in
 			${PF}.cygwin.patch)
 				if [ "${S}" = "${srcdir}" ]
 				then
-					patchlevel=1
+					patchlevel=1;
 				else
-					patchlevel=2
+					patchlevel=2;
 				fi
 				;;
-			*) patchlevel=0 ;;
+			*.bz2|*.gz)
+				(
+					cd ${T}
+					unpack ${patchfile_path}
+				)
+				patchfile_path=${T}/${patchfile_name%.*}
+				;;
 		esac
 
 		while (( patchlevel <= 3 ))
@@ -888,7 +896,6 @@ cygautoreconf() {
 			for f in ${config_h_in}
 			do
 				touch ${d}/${f}
-				rm -f ${d}/${config_h%%:*}
 			done
 		fi
 	done
@@ -901,10 +908,12 @@ cygautoreconf() {
 
 # standard configure call
 cygconf() {
-	local confargs="--prefix=/usr --exec-prefix=/usr --bindir=/usr/bin \
-		--sbindir=/usr/sbin --libexecdir=/usr/sbin --localstatedir=/var \
-		--sysconfdir=/etc"
+	local ac_config_files;
+	local ac_config_headers;
+	local confargs;
 	local confdir;
+	local configure;
+	local f;
 
 	if defined CYGCONF_SOURCE && [ -x ${CYGCONF_SOURCE}/configure ]
 	then
@@ -919,7 +928,27 @@ cygconf() {
 		error "no configure script found";
 	fi
 
-	case "x$(grep -m 1 'GNU Autoconf' ${confdir}/configure | cut -d ' ' -f 6)" in
+	configure="${confdir}/configure"
+
+	# AC_CONFIG_FILES should not be dist'ed, but it sometimes happens anyway
+	eval $(grep -h '^ac_config_files=' ${configure})
+	eval $(grep -h '^ac_config_headers=' ${configure})
+
+	for f in ${ac_config_files} ${ac_config_headers}
+	do
+		if [ -f ${confdir}/${f} ]
+		then
+			inform "Removing ${f} to be regenerated by configure"
+			rm -f ${confdir}/${f}
+		fi
+	done
+
+	# Set default configure arguments
+	confargs="--prefix=/usr --exec-prefix=/usr --bindir=/usr/bin \
+			  --sbindir=/usr/sbin --libexecdir=/usr/sbin \
+			  --localstatedir=/var --sysconfdir=/etc"
+
+	case "x$(grep -m 1 'GNU Autoconf' ${configure} | cut -d ' ' -f 6)" in
 		x2.6[0-9])
 			confargs+=" --datarootdir=/usr/share --docdir=/usr/share/doc/${P}"
 			;;
@@ -934,8 +963,9 @@ cygconf() {
 	# and following thread for details)
 	export ac_cv_func_mmap_fixed_mapped=yes;
 
-	verbose ${confdir}/configure --srcdir="${confdir}" ${confargs} \
-		"${@}" ${CYGCONF_ARGS} || error "configure failed"
+	verbose ${configure} \
+		--srcdir="${confdir}" ${confargs} "${@}" ${CYGCONF_ARGS} \
+		|| error "configure failed"
 }
 
 # standard GNU make call
@@ -1320,11 +1350,11 @@ __prepstrip() {
 	# Ruby and Apache2 modules should be *.so, nothing else!!!
 	for exe in $(find * -type f -name '*.dll' -o -name '*.exe' -o -name '*.so')
 	do
-		chmod +x ${exe};
 		# Mono assemblies must not be stripped!
 		if [ -w ${exe} ] && ! objdump -p ${exe} | grep -q "DLL Name: mscoree.dll"
 		then
 			echo "        ${exe}";
+			chmod +x ${exe};
 			strip ${exe};
 		fi
 	done
@@ -1504,7 +1534,7 @@ __pkg_diff() {
 	default_excludes="CYGWIN-PATCHES aclocal.m4* autom4te.cache \
 		config.cache config.log config.status config.h config.h.in
 		ABOUT-NLS Makefile.in.in Makevars.template \
-		*.class *.pyc *.mo *.gmo *.orig *.rej *.temp *~ *.stackdump";
+		*.class *.pyc *.mo *.gmo *.orig *.rej *.spec *.temp *~ *.stackdump";
 
 	case ${PN} in
 		automake*|libtool*) ;;
